Finish import Paratext 7 lds characters
Fix a threading bug.

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -1,5 +1,5 @@
 # English internationalization file for Syllable Parser
-# Copyright (c) 2016 SIL International 
+# Copyright (c) 2016-2017 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -12,6 +12,9 @@ menu.saveas=Save _As...
 menu.projectmanagement=_Project Management
 menu.projectmanagementbackup=_Back up this project...
 menu.projectmanagementrestore=_Restore a project...
+menu.importsegments=I_mport Segments
+menu.importflexphonemes=Import segments (phonemes) from _FLEx database
+menu.importparatextcharacters=Import segments (characters) from _ParaTExt 7 .lds file
 menu.importwords=_Import Words
 menu.importplainwordlist=Import _text file with one word per line
 menu.importflexwordlist=Import word list exported from _FLEx (in tab-delimited form)
@@ -37,8 +40,8 @@ menu.vernacularfont=_Vernacular Font
 menu.analysisfont=_Analysis Font
 menu.parser=Pa_rser
 menu.tools=_Tools
-menu.syllabifywords=Syllabify _Words
 menu.tryaword=Try a Word
+menu.syllabifywords=Syllabify _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
@@ -128,6 +131,11 @@ label.hyphenationstartsafter=Hyphenation starts after this many characters from 
 label.hyphenationstopsbefore=Hyphenation stops before this many characters from the end:
 label.importing=Importing: 
 label.importingcanceled=Importing canceled!
+label.importparatextcharacters=Import segments (characters) from ParaTExt 7 .lds file.\nThis will remove all current segments, including those defined in the CV Natural Classes.\n\nWe suggest you make a backup before doing this.
+label.importparatextcharacterserror=The {0} file did not have any characters defined.  The import failed.
+label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?  (Yes will let you make a backup and then clear the correct syllabifications. No will clear the correct syllabifications without backing up first.  Cancel will exit.)
+label.backupnowbeforeclearwords=Do you want to do a backup now?  (Yes will let you make a backup and then clear the words. No will clear the words without backing up first.  Cancel will exit.)
+label.backupnowbeforeimport=Do you want to do a backup now?  (Yes will let you make a backup and then do the import. No will do the import without backing up first.  Cancel will exit.)
 label.name=Name
 label.naturalclasses=Natural Classes
 # menu.syllabifywords goes at the end of the following message
@@ -158,7 +166,7 @@ label.wordtofind=Word to find:
 label.wordtotry=Word to try: 
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
-label.clearwords=Remove all the words from the word list\nWe suggest you make a backup before doing this.
+label.clearwords=Remove all the words from the word list.\nWe suggest you make a backup before doing this.
 label.clearcorrectsyllabificationinwords=Remove all the correct syllabification forms in all words in the word list\nWe suggest you make a backup before doing this.
 label.areyousure=Are you sure you want to do this?
 label.compare=Compare
