--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -1,5 +1,5 @@
 # Spanish internationalization file for Syllable Parser
-# Copyright (c) 2016 SIL International 
+# Copyright (c) 2016-2017 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -12,6 +12,9 @@ menu.saveas=Guardar _Como...
 menu.projectmanagement=Administración de _proyectos
 menu.projectmanagementbackup=_Respaldar este proyecto...
 menu.projectmanagementrestore=R_estaurar un proyecto...
+menu.importsegments=I_mportar Segmentos
+menu.importflexphonemes=Importar segmentos (fonemás) desde _FLEx base de datos
+menu.importparatextcharacters=Importar segmentos (charácteres) desde _ParaTExt 7 archivo .lds
 menu.importwords=_Importar Palabras
 menu.importplainwordlist=Importar archivo de _texto con una palabra por línea
 menu.importflexwordlist=Importar lista de palabras exportado del programa _FLEx (en forma tab-delimited)
@@ -133,6 +136,11 @@ label.discussion=Discussión
 label.backupcomment=Teclar una descripción para este backup:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
+label.importparatextcharacters=Importar segmentos (carácteres) desde ParaTExt 7 archivo .lds.\nEsto eliminará todos los segmentos actuales, incluyendo aquellos definidos en las Clases Naturales CV.\n\nLe sugerimos hacer una copia de seguridad antes de hacer esto.
+label.importparatextcharacterserror=El archivo {0} no tenía ningún carácter definido. Error en la importación.
+label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora? (Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.  No borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar. Cancelar la salida.)
+label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora? (Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras. No borrará las palabras sin hacer copias de seguridad primero. Cancelar la salida.)
+label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora?  (Sí le permitirá hacer una copia de seguridad y luego hacer la importación.  No hará la importación sin copia de seguridad en primer lugar. Cancelar la salida.)
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
