Revise user documentation, add suggested steps document
Fix a few small bugs that showed up revising the documentation.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -40,7 +40,7 @@ menu.vernacularfont=Fuente _Vernacular
 menu.analysisfont=Fuente _Analítica
 menu.parser=Analizado_r
 menu.tools=_Herramientas
-menu.syllabifywords=_Silabificar Palabras
+menu.syllabifywords=_Analizar todas las palabras
 menu.tryaword=Prueba una palabra
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificación
 menu.findword=_Encontrar la palabra
@@ -53,6 +53,7 @@ menu.settings=Ajustes
 menu.help=A_yuda
 menu.about=_A cerca de Asheninka
 menu.userdocumentation=Manual del Usuario
+menu.suggestedsteps=_Pasos sugeridos
 menu.helpintro=_Introducción a la silabificación
 
 # About dialog
@@ -101,6 +102,7 @@ onc.view.syllablepatterns=ONC Syllable Patterns
 onc.view.words=ONC Words
 
 #labels
+label.backupproject=Respaldar este proyecto
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
 label.orthographicforms=Formas ortografía
@@ -206,7 +208,7 @@ tooltip.copy=Copiar   Ctrl+C
 tooltip.paste=Pegar   Ctrl+P
 tooltip.insertnew=Nueva Ítem   Ctrl+I
 tooltip.remove=Remover Ítem   Ctrl+D
-tooltip.syllabifywords=Silabificar Palabras   Ctrl+W
+tooltip.syllabifywords=Analizar todas las palabras   Ctrl+W
 tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificación
 tooltip.findword=Encontrar la palabra   Ctrl+F
 
