Refine and update build items.
Improve localization of some tools.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -122,7 +122,9 @@ label.discretionaryhyphen=Carácter(s) de guión discrecional:
 label.hyphenationstartsafter=El guión comienza después de muchos caracteres desde el principio:
 label.hyphenationstopsbefore=El guión se detiene antes de esto muchos personajes desde el final:
 label.active=Usa
+label.no=No
 label.ok=OK
+label.yes=Sí
 label.segmentsandnaturalclasses=Seg. o CN
 label.backupdirectory=Carpeta de archivos de respalda: 
 label.browse=Buscar
