Fix long dialog messages so fit in Linux
Rename Linux icon file so it shows.

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -135,9 +135,9 @@ label.importing=Importing:
 label.importingcanceled=Importing canceled!
 label.importparatextcharacters=Import segments (characters) from ParaTExt 7 .lds file.\nThis will remove all current segments, including those defined in the CV Natural Classes.\n\nWe suggest you make a backup before doing this.
 label.importparatextcharacterserror=The {0} file did not have any characters defined.  The import failed.
-label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?  (Yes will let you make a backup and then clear the correct syllabifications. No will clear the correct syllabifications without backing up first.  Cancel will exit.)
-label.backupnowbeforeclearwords=Do you want to do a backup now?  (Yes will let you make a backup and then clear the words. No will clear the words without backing up first.  Cancel will exit.)
-label.backupnowbeforeimport=Do you want to do a backup now?  (Yes will let you make a backup and then do the import. No will do the import without backing up first.  Cancel will exit.)
+label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the correct syllabifications.\nNo will clear the correct syllabifications without backing up first.\nCancel will exit.)
+label.backupnowbeforeclearwords=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the words.\nNo will clear the words without backing up first.\nCancel will exit.)
+label.backupnowbeforeimport=Do you want to do a backup now?\n(Yes will let you make a backup and then do the import.\nNo will do the import without backing up first.\nCancel will exit.)
 label.name=Name
 label.naturalclasses=Natural Classes
 label.no=No
