--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -142,9 +142,9 @@ label.importing=Importar:
 label.importingcanceled=Es: Importing canceled!
 label.importparatextcharacters=Importar segmentos (carácteres) desde ParaTExt 7 archivo .lds.\nEsto eliminará todos los segmentos actuales, incluyendo aquellos definidos en las Clases Naturales CV.\n\nLe sugerimos hacer una copia de seguridad antes de hacer esto.
 label.importparatextcharacterserror=El archivo {0} no tenía ningún carácter definido. Error en la importación.
-label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora? (Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.  No borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar. Cancelar la salida.)
-label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora? (Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras. No borrará las palabras sin hacer copias de seguridad primero. Cancelar la salida.)
-label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora?  (Sí le permitirá hacer una copia de seguridad y luego hacer la importación.  No hará la importación sin copia de seguridad en primer lugar. Cancelar la salida.)
+label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora?\n(Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.\nNo borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar.\nCancelar la salida.)
+label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora?\n(Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras.\nNo borrará las palabras sin hacer copias de seguridad primero.\nCancelar la salida.)
+label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora? \n(Sí le permitirá hacer una copia de seguridad y luego hacer la importación.\nNo hará la importación sin copia de seguridad en primer lugar.\nCancelar la salida.)
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
