--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -5,10 +5,10 @@
 program.name=Asheninka
 # menu items
 menu.file=_Archivo
-menu.new=_Nuevo
-menu.open=A_brir...
-menu.save=_Guardar
-menu.saveas=Guardar _Como...
+menu.new=_Nuevo Proyecto
+menu.open=A_brir Proyecto...
+menu.save=_Guardar Proyecto
+menu.saveas=Guardar Proyecto _Como...
 menu.projectmanagement=Administración de _proyectos
 menu.projectmanagementbackup=_Respaldar este proyecto...
 menu.projectmanagementrestore=R_estaurar un proyecto...
@@ -202,9 +202,9 @@ misc.niyheader=Lo siento
 misc.niycontent=Todavía no implementado.
 
 # Tooltips
-tooltip.new=Nuevo   Ctrl+N
-tooltip.open=Abrir   Ctrl+O
-tooltip.save=Guardar   Ctrl+S
+tooltip.new=Nuevo Proyecto   Ctrl+N
+tooltip.open=Abrir Proyecto   Ctrl+O
+tooltip.save=Guardar Proyecto   Ctrl+S
 tooltip.cut=Cortar   Ctrl+X
 tooltip.copy=Copiar   Ctrl+C
 tooltip.paste=Pegar   Ctrl+P
