First pass at UI for segments with grapheme elements

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -105,7 +105,9 @@ onc.view.words=ONC Words
 label.backupproject=Respaldar este proyecto
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
-label.orthographicforms=Formas ortografía
+label.orthographicform=Formas ortografía
+label.orthographicforms=Formas ortografías
+label.orthographicformswithcolon=Formas ortografías:
 label.date=Fecha
 label.description=Descripción
 label.naturalclasses=Clases Naturales
@@ -145,6 +147,7 @@ label.importparatextcharacterserror=El archivo {0} no tenía ningún carácter defi
 label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora?\n(Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.\nNo borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar.\nCancelar la salida.)
 label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora?\n(Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras.\nNo borrará las palabras sin hacer copias de seguridad primero.\nCancelar la salida.)
 label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora? \n(Sí le permitirá hacer una copia de seguridad y luego hacer la importación.\nNo hará la importación sin copia de seguridad en primer lugar.\nCancelar la salida.)
+label.environments=Entornos
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
