--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -96,7 +96,9 @@ cv.view.syllablepatterns.remove=Remover
 cv.view.syllablepatterns.wordboundary=Límite de palabra
 cv.view.words=Palabras del CV
 cv.view.wordspredictedvscorrect=Predicción vs Corregir
- 
+cv.view.graphemenaturalclasses=Classes Naturales de Grafemas
+cv.view.environments=Entornos
+
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
 onc.view.words=ONC Words
@@ -128,9 +130,12 @@ label.no=No
 label.ok=OK
 label.yes=Sí
 label.segmentsandnaturalclasses=Seg. o CN
+label.graphemesandnaturalclasses=Gra. o CN
+label.graphemeornaturalclass=Gra. or CN
 label.backupdirectory=Carpeta de archivos de respalda: 
 label.browse=Buscar
 label.choosebackup=Seleccionar un archivo de respalda para restaurar:
+label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
 label.filename=Nombre del archivo
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
@@ -147,6 +152,7 @@ label.importparatextcharacterserror=El archivo {0} no tenía ningún carácter defi
 label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora?\n(Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.\nNo borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar.\nCancelar la salida.)
 label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora?\n(Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras.\nNo borrará las palabras sin hacer copias de seguridad primero.\nCancelar la salida.)
 label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora? \n(Sí le permitirá hacer una copia de seguridad y luego hacer la importación.\nNo hará la importación sin copia de seguridad en primer lugar.\nCancelar la salida.)
+label.environmentrepresentation=Entorno
 label.environments=Entornos
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
