Add error reporting to Environment editing UI

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -260,3 +260,20 @@ report.tawsuccess=¡Éxito!
 report.failurecolorword=rojo
 report.matchedcolorword=azul
 report.successcolorword=verde
+
+#Environment messages
+environmentsyntaxerror.content_after_word_final_boundary=Ningún contenido debe aparecer después de un límite final de palabra (#); detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.content_before_word_initial_boundary=Ningún contenido debe aparecer antes de una palabra inicial #; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_class_after_opening_square_bracket=Falta una clase; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_class_or_grapheme=Una clase o un grafema falta; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_closing_paren=Falta un paréntesis de cierre; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_closing_square_bracket=Falta un corchete de cierre; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_opening_paren=Falta un paréntesis de apertura; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.missing_opening_square_bracket=Falta un corchete de apertura; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.too_many_slashes=Hay demasiadas barras diagonales (/); solo se necesita uno (al comienzo); detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.too_many_underscores=Hay demasiados subrayados del entorno; solo uno es necesario; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.too_many_word_final_boundaries=Hay demasiados marcadores de límite de palabras finales (#); solo uno es necesario; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.too_many_word_initial_boundaries=Hay demasiados marcadores de límite inicial de palabras (#); solo uno es necesario; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.unknown=Error desconocido en el entorno; detectado en o alrededor de la posición {0}.
+environmentsyntaxerror.unknowngrapheme=Grafema no reconocido comenzando en '{0}' en el entorno.
+environmentsyntaxerror.unknowngraphemenaturalclass=Clase natural de grafemas no reconocida '{0}' en el entorno.
