Add comparison of new graphemes, grapheme natural classes, and environments

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -234,6 +234,13 @@ report.performedon=Presentado en
 report.segmentinventory=Inventorio de segmentos
 report.samesegmentinventory=Ambos tienen el mismo inventario segmento.
 report.segmentswhichdiffer=Los siguientes segmentos difieren entre los dos.
+report.graphemes=Grafemas
+report.graphemenaturalclasses=Clases Naturales de Grafemas
+report.samegraphemenaturalclasses=Ambos tienen las mismas clases naturales de grafemas.
+report.graphemenaturalclasseswhichdiffer=Las siguientes clases naturales de grafemas difieren entre los dos.
+report.environments=Entornos
+report.sameenvironments=Ambos tienen los mismos entornos.
+report.environmentswhichdiffer=Los siguientes entornos difieren entre los dos.
 report.first=Primer{0}
 report.second=Segund{0}
 report.adjectivalendingf=a
