Add grapheme and environment info to Try  Word

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -162,6 +162,10 @@ label.untested=No probado
 label.sethyphenationparameters=Establecer Parámetros de Palabras con Guiones
 label.success=Éxito
 label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos comensado a '{0}'.
+label.cvsegmentgraphemefailure=<br/><span style='margin-left:10pt;'>Trató de usar grafema '{0}'.</span>
+label.cvsegmentgraphemeenvironmentfailed=Falló
+label.cvsegmentgraphemeenvironmentfailure=<br/><span style='margin-left:20pt;'>Trató de usar entorno '{0}'.  {1}.</span>
+label.cvsegmentgraphemeenvironmentpassed=Tuvo éxito
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontró clases '{0}' por grafemas '{1}'.
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en sílabas
 label.choosepredicted=Elija el que predijo silabificaciónes convertir corregir silabeo
