Update user documentation

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -130,8 +130,9 @@ label.no=No
 label.ok=OK
 label.yes=Sí
 label.segmentsandnaturalclasses=Seg. o CN
+label.graphemenaturalclass=Clase Natural de Grafemas
 label.graphemesandnaturalclasses=Gra. o CN
-label.graphemeornaturalclass=Gra. or CN
+label.graphemeornaturalclass=Grafema o clase natural
 label.backupdirectory=Carpeta de archivos de respalda: 
 label.browse=Buscar
 label.choosebackup=Seleccionar un archivo de respalda para restaurar:
