Make changes to grapheme classes show in environments Use combobox for grapheme classes when type [

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -136,6 +136,7 @@ label.graphemeornaturalclass=Grafema o clase natural
 label.backupdirectory=Carpeta de archivos de respalda: 
 label.browse=Buscar
 label.choosebackup=Seleccionar un archivo de respalda para restaurar:
+label.chooseclass=Seleccionar clase
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
 label.filename=Nombre del archivo
