Fix typo in paste tooltip

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -222,7 +222,7 @@ tooltip.open=Abrir Proyecto   Ctrl+O
 tooltip.save=Guardar Proyecto   Ctrl+S
 tooltip.cut=Cortar   Ctrl+X
 tooltip.copy=Copiar   Ctrl+C
-tooltip.paste=Pegar   Ctrl+P
+tooltip.paste=Pegar   Ctrl+V
 tooltip.insertnew=Nueva Ítem   Ctrl+I
 tooltip.remove=Remover Ítem   Ctrl+D
 tooltip.syllabifywords=Analizar todas las palabras   Ctrl+W
