First pass at adding sonority hierarchy approach

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -1,5 +1,5 @@
 # Spanish internationalization file for Syllable Parser
-# Copyright (c) 2016-2017 SIL International
+# Copyright (c) 2016-2018 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -83,7 +83,7 @@ approach.nuclearprojection=Nuclear Projection
 approach.ot=Optimality Theory
 
 #Views within approaches
-cv.view.segmentinventory=Segmentos del CV
+cv.view.segmentinventory=Segmentos
 cv.view.naturalclass=Classes Naturales del CV
 cv.view.syllablepatterns=Patrones de Sílibas del CV
 cv.view.syllablepatterns.up=Mover Arriba
@@ -99,6 +99,15 @@ cv.view.wordspredictedvscorrect=Predicción vs Corregir
 cv.view.graphemenaturalclasses=Classes Naturales de Grafemas
 cv.view.environments=Entornos
 
+sh.view.segmentinventory=Segmentos
+sh.view.sonorityhierarchy=Sonority Hierarchy
+sh.view.sonorityhierarchy.up=Move Up
+sh.view.sonorityhierarchy.down=Move Down
+sh.view.words=Son. Hier. Words
+sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+sh.view.graphemenaturalclasses=Grapheme Natural Classes
+sh.view.environments=Environments
+
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
 onc.view.words=ONC Words
@@ -113,6 +122,7 @@ label.orthographicformswithcolon=Formas ortografías:
 label.date=Fecha
 label.description=Descripción
 label.naturalclasses=Clases Naturales
+label.segments=Segmentos
 label.segmentornaturalclass=Segmento o Clase Naturale
 label.syllablepatterns=Modelo de Sílabas
 label.name=Nombre
@@ -140,6 +150,7 @@ label.chooseclass=Seleccionar clase
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
 label.filename=Nombre del archivo
+label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
