--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -83,7 +83,7 @@ approach.nuclearprojection=Projection nucléaire
 approach.ot=Théorie d\u2019optimalité 
  
 #Views within approaches
-cv.view.segmentinventory=Liste de segments CV
+cv.view.segmentinventory=Liste de segments
 cv.view.naturalclass=Classes naturelles CV
 cv.view.syllablepatterns=Modèles syllabiques CV
 cv.view.syllablepatterns.up=Avancer
@@ -98,6 +98,15 @@ cv.view.words=Mots CV
 cv.view.wordspredictedvscorrect=Mots CV prédits versus corrects
 cv.view.graphemenaturalclasses=Graphème classes naturelles 
 cv.view.environments=Environnements
+
+sh.view.segmentinventory=Liste de segments
+sh.view.sonorityhierarchy=Sonority Hierarchy
+sh.view.sonorityhierarchy.up=Move Up
+sh.view.sonorityhierarchy.down=Move Down
+sh.view.words=Son. Hier. Words
+sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+sh.view.graphemenaturalclasses=Grapheme Natural Classes
+sh.view.environments=Environments
 
 onc.view.segmentinventory=Liste de segments ONC
 onc.view.syllablepatterns=Modèles syllabiques ONC
@@ -115,6 +124,7 @@ label.chooseclass=Choisir classe
 label.choosegnc=Choisir un graphèmes et/ou classe naturelle de graphème ou plusieurs
 label.choosenc=Choisir une classe naturelle ou plusieurs
 label.choosepredicted=Choisir quelles syllabifications prédites à convertir en syllabification correcte
+label.choosesegments=Choisir un segment ou plusieurs
 label.choosesnc=Choisir un segment et/ou classe naturelle ou plusieurs
 label.close=Fermer
 label.correctsyllabification=Corriger ruptures syllabiques
@@ -169,6 +179,7 @@ label.results=Résultats:
 label.segment=Segment
 label.segmentinventory=Liste des segments
 label.segmentornaturalclass=Segment ou classe naturelle 
+label.segments=Segments
 label.segmentsandnaturalclasses=Seg. ou NC
 label.sethyphenationparameters=Choisir paramètres d\u2019usage de traits d\u2019union 
 label.success=Succès
