Sonority hierarchy view had wrong label for the data items

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -208,6 +208,7 @@ label.results=Resultados
 label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
+label.sonorityhierarchy=Sonority Hierarchy
 
 # file loading/saving
 file.error=Error
