--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -208,6 +208,7 @@ label.sameimplementationscontent=Les deux implémentations choisies sont les même
 label.pleasewait=Attendez svp...
 label.pleasewaitcomparer=Cette opération peut durer quelques secondes ou plusieurs minutes selon la quantité de différences.
 label.pleasewaittaw=Cette opération peut durer quelques secondes.
+label.sonorityhierarchy=Sonority Hierarchy
 
 # file loading/saving
 file.error=Erreur
