First pass on sonority hierarchy Try a Word

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -279,9 +279,10 @@ report.tawtitle=Silabación de {0}
 report.tawsegments=Parsing into segments
 report.tawnaturalclasses=Análisis en segmentos
 report.tawsyllablepatterns=Análisis de las clases naturales en sílabas
-report.tawdetails=Los detalles de los patrones de sílabas probados, en el orden en que fueron probados, están por debajo. Haga clic en el cuadro con un signo más para abrir ese camino. Si un patrón de sílaba no coincide, está en {0}. Si un patrón de sílaba coincidió, pero finalmente no condujo a un análisis exitoso, está en {1}. Finalmente, si un patrón de sílaba coincide y conduce a un análisis exitoso, está en {2}. Tenga en cuenta que los análisis correctos son siempre el último elemento de la lista porque el algoritmo se cierra después de encontrar el primer análisis correcto.report.tawgrapheme=Grafema:
+report.tawcvdetails=Los detalles de los patrones de sílabas probados, en el orden en que fueron probados, están por debajo. Haga clic en el cuadro con un signo más para abrir ese camino. Si un patrón de sílaba no coincide, está en {0}. Si un patrón de sílaba coincidió, pero finalmente no condujo a un análisis exitoso, está en {1}. Finalmente, si un patrón de sílaba coincide y conduce a un análisis exitoso, está en {2}. Tenga en cuenta que los análisis correctos son siempre el último elemento de la lista porque el algoritmo se cierra después de encontrar el primer análisis correcto.report.tawgrapheme=Grafema:
 report.tawsegment=Segmento:
 report.tawsuccess=¡Éxito!
+report.tawshdetails=Los detalles del segmento para las asignaciones de clases naturales y la comparación de sonoridad entre pares de clases naturales se encuentran a continuación. Si un segmento no se pudo asignar a una clase natural, está en {0}. De lo contrario está en {2}.
 report.failurecolorword=rojo
 report.matchedcolorword=azul
 report.successcolorword=verde
