--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -279,10 +279,10 @@ report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
 report.tawnaturalclasses=Analysant segments en classes naturelles
 report.tawsyllablepatterns=Analysant classes naturelles en syllabes
-report.tawdetails=Les détails des modèles syllabiques essayés, dans l\u2019ordre des essais, sont ici-bas. Cliquez sur le signe + pour ouvrir ce chemin. Si un modèle syllabique ne correspond pas il se trouve en {0}. Si un modèle syllabique correspond, mais ne réussit pas à s\u2019analyser correctement il se trouve en {1}. Finalement, si un modèle syllabique correspond et aboutit à une analyse réussie, il est en {2}. Notez que les analyses réussies sont toujours le dernier point dans la liste parce que l\u2019algorithme se termine après la première analyse réussie.
+report.tawcvdetails=Les détails des modèles syllabiques essayés, dans l\u2019ordre des essais, sont ici-bas. Cliquez sur le signe + pour ouvrir ce chemin. Si un modèle syllabique ne correspond pas il se trouve en {0}. Si un modèle syllabique correspond, mais ne réussit pas à s\u2019analyser correctement il se trouve en {1}. Finalement, si un modèle syllabique correspond et aboutit à une analyse réussie, il est en {2}. Notez que les analyses réussies sont toujours le dernier point dans la liste parce que l\u2019algorithme se termine après la première analyse réussie.
 report.tawgrapheme=Graphème:
 report.tawsegment=Segment:
-report.tawsuccess=Réussite!
+report.tawshdetails=The details of the segment to natural class mappings and the sonority comparison between pairs of natural classes is below.  If a segment failed to map to a natural class, it is in {0}.  Otherwise it is in {2}.report.tawsuccess=Réussite!
 report.failurecolorword=rouge
 report.matchedcolorword=bleu
 report.successcolorword=vert
