Improve sonority hierarchy try a word

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -182,6 +182,7 @@ label.cvsegmentgraphemeenvironmentpassed=Tuvo éxito
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontró clases '{0}' por grafemas '{1}'.
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en sílabas
 label.choosepredicted=Elija el que predijo silabificaciónes convertir corregir silabeo
+label.shsyllabificationfailure=Fracaso: no se pudieron analizar los segmentos en sílabas
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=No hay silabificaciónes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 label.wordtofind=Palabra para buscar: 
@@ -276,13 +277,18 @@ report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
 # Try a Word
 report.tawtitle=Silabación de {0}
-report.tawsegments=Parsing into segments
+report.tawsegments=Analizando en segmentos
 report.tawnaturalclasses=Análisis en segmentos
 report.tawsyllablepatterns=Análisis de las clases naturales en sílabas
 report.tawcvdetails=Los detalles de los patrones de sílabas probados, en el orden en que fueron probados, están por debajo. Haga clic en el cuadro con un signo más para abrir ese camino. Si un patrón de sílaba no coincide, está en {0}. Si un patrón de sílaba coincidió, pero finalmente no condujo a un análisis exitoso, está en {1}. Finalmente, si un patrón de sílaba coincide y conduce a un análisis exitoso, está en {2}. Tenga en cuenta que los análisis correctos son siempre el último elemento de la lista porque el algoritmo se cierra después de encontrar el primer análisis correcto.report.tawgrapheme=Grafema:
 report.tawsegment=Segmento:
 report.tawsuccess=¡Éxito!
 report.tawshdetails=Los detalles del segmento para las asignaciones de clases naturales y la comparación de sonoridad entre pares de clases naturales se encuentran a continuación. Si un segmento no se pudo asignar a una clase natural, está en {0}. De lo contrario está en {2}.
+report.tawshrelation=Relación
+report.tawshsegment1=Segmento 1
+report.tawshsegment2=Segmento 2
+report.tawshmissingnc=No clase natural
+report.tawshstartssyllable=Comienza la sílaba
 report.failurecolorword=rojo
 report.matchedcolorword=azul
 report.successcolorword=verde
