--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -283,6 +283,11 @@ report.tawcvdetails=Les détails des modèles syllabiques essayés, dans l\u2019ord
 report.tawgrapheme=Graphème:
 report.tawsegment=Segment:
 report.tawshdetails=The details of the segment to natural class mappings and the sonority comparison between pairs of natural classes is below.  If a segment failed to map to a natural class, it is in {0}.  Otherwise it is in {2}.report.tawsuccess=Réussite!
+report.tawshrelation=Relation
+report.tawshsegment1=Segment 1
+report.tawshsegment2=Segment 2
+report.tawshmissingnc=No Natural Class
+report.tawshstartssyllable=Starts Syllable
 report.failurecolorword=rouge
 report.matchedcolorword=bleu
 report.successcolorword=vert
