Add sonority hierarchy comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -248,7 +248,7 @@ radio.choosebackup=Elija una copia de seguridad
 
 # Differences reports
 report.cvtitle=Comparación del CV Approach
-report.comparisonof=Comparación del CV Approach entre
+report.cvcomparisonof=Comparación del CV Approach entre
 report.performedon=Presentado en 
 report.segmentinventory=Inventorio de segmentos
 report.samesegmentinventory=Ambos tienen el mismo inventario segmento.
@@ -275,6 +275,12 @@ report.words=Palabras
 report.samewords=Ambos tienen las mismas palabras con las mismas sílabas.
 report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
+report.shtitle=Comparación del SH Approach
+report.shcomparisonof=Comparación del SH Approach entre
+report.shsonorityhierarchy=Sonority Hierarchy
+report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
+report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
