--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -247,7 +247,7 @@ radio.choosebackup=Choisir une sauvegarde
 
 # Differences reports
 report.cvtitle=Comparaison d\u2019approche CV
-report.comparisonof=Comparaison d\u2019approche CV entre:
+report.cvcomparisonof=Comparaison d\u2019approche CV entre:
 report.performedon=Exécuté le 
 report.segmentinventory=Liste de segments
 report.samesegmentinventory=Liste de segments identique.
@@ -274,6 +274,12 @@ report.words=Mots
 report.samewords=Les deux ont les mêmes mots avec les mêmes syllabes.
 report.wordswhichdiffer=Les mots suivants diffèrent entre les deux.
 report.syllabification=Syllabification
+report.shtitle=Sonority Hierarchy Approach Comparison
+report.shcomparisonof=Comparaison d\u2019approche SH entre:
+report.shsonorityhierarchy=Hiérarchie de sonorité
+report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.shnaturalclasseswhichdiffer= Les classes naturelles suivantes diffèrent entre les deux.
+report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 # Try a Word
 report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
