Add comparison of approaches to syllabification

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -47,6 +47,7 @@ menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
 menu.clearcorrectsyllabificationinwords=Remover _silabificación correcta en todas las palabras
 menu.compareimplementations=Comparar _implementaciones
+menu.compareapproachsyllabifications=Comparar los resultados de sílabas entre los enfoques
 menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
 menu.settings=Ajustes
@@ -210,6 +211,7 @@ label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
 label.sonorityhierarchy=Sonority Hierarchy
+label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
 
 # file loading/saving
 file.error=Error
@@ -281,6 +283,12 @@ report.shsonorityhierarchy=Sonority Hierarchy
 report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
 report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
+report.syllabifications=Silabaciones
+report.samesyllabifications=Todas las palabras tienen las mismas sílabas.
+report.syllabificationswhichdiffer=Las siguientes palabras tienen diferentes sílabas.
+report.syllabificationstitle=Comparar enfoques de silabeo
+report.syllabificationscomparisonof=Comparación de los enfoques de CV y Sonority Hierarchy a Syllabification
+report.syllabificationfailed=falló
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
