--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -47,6 +47,7 @@ menu.findword=_Trouver mot
 menu.clearwords=_Supprimer tous mots
 menu.clearcorrectsyllabificationinwords=Supprimer _ruptures de syllabes correctes dans tous mots
 menu.compareimplementations=Comparer _Implementations
+menu.compareapproachsyllabifications=Compare Syllabification Results between Approaches
 menu.view=_Affichage
 menu.changeinterfacelanguage=_Changer langue d\u2019interface
 menu.settings=Réglages
@@ -209,6 +210,7 @@ label.pleasewait=Attendez svp...
 label.pleasewaitcomparer=Cette opération peut durer quelques secondes ou plusieurs minutes selon la quantité de différences.
 label.pleasewaittaw=Cette opération peut durer quelques secondes.
 label.sonorityhierarchy=Sonority Hierarchy
+label.comparesyllabifications=Compare Syllabification Results between Approaches
 
 # file loading/saving
 file.error=Erreur
@@ -280,6 +282,12 @@ report.shsonorityhierarchy=Hiérarchie de sonorité
 report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
 report.shnaturalclasseswhichdiffer= Les classes naturelles suivantes diffèrent entre les deux.
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
+report.syllabifications=Syllabifications
+report.samesyllabifications=All the words have the same syllabifications.
+report.syllabificationswhichdiffer=The following words have different syllabifications.
+report.syllabificationstitle=Compare syllabification approaches
+report.syllabificationscomparisonof=Comparison of CV and Sonority Hierarchy approaches to Syllabification
+report.syllabificationfailed=echec
 # Try a Word
 report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
